<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/confirmp"
    tools:context=".SetPasswordActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:background="@android:color/background_dark"
        android:text="@string/greek1"
        android:textAllCaps="false"
        android:textColor="#AFAFAF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:background="@android:color/background_dark"
        android:text="@string/greek2"
        android:textAllCaps="false"
        android:textColor="#AFAFAF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:background="@android:color/background_dark"
        android:text="@string/greek3"
        android:textAllCaps="false"
        android:textColor="#AFAFAF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:background="@android:color/background_dark"
        android:text="@string/greek4"
        android:textAllCaps="false"
        android:textColor="#AFAFAF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:background="@android:color/background_dark"
        android:text="@string/greek5"
        android:textAllCaps="false"
        android:textColor="#AFAFAF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:background="@android:color/background_dark"
        android:text="@string/greek6"
        android:textAllCaps="false"
        android:textColor="#AFAFAF"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:background="@android:color/background_dark"
        android:text="@string/greek7"
        android:textAllCaps="false"
        android:textColor="#AFAFAF"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:background="@android:color/background_dark"
        android:text="@string/greek8"
        android:textAllCaps="false"
        android:textColor="#AFAFAF"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:background="@android:color/background_dark"
        android:text="@string/greek9"
        android:textAllCaps="false"
        android:textColor="#AFAFAF"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/showPasswordView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/white"
        android:textFontWeight="800"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnConfirmClick"
        android:text="Confirm"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnClearClick"
        android:text="Clear"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/SetPasswordActivity_instruction"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>